[gd_scene load_steps=4 format=3 uid="uid://i8tlgf1o2cw1"]

[ext_resource type="Script" path="res://Scenes/GameManager.gd" id="1_uw3np"]
[ext_resource type="PackedScene" uid="uid://dndxdwpfq7d02" path="res://Scenes/Menus/MainMenu.tscn" id="2_6hr51"]
[ext_resource type="PackedScene" uid="uid://m6nmmx454axd" path="res://Scenes/UI/user_interface.tscn" id="2_hcoye"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_uw3np")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoadScreen" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="User_Interface" parent="CanvasLayer" instance=ExtResource("2_hcoye")]
visible = false

[node name="CurrentScene" type="Node" parent="."]

[node name="MainMenu" parent="CurrentScene" instance=ExtResource("2_6hr51")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
